k8s/manifests/argocd-httproute/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-argocd-route
spec:
  parentRefs:
  - name: main-gateway-api
    namespace: infra
    sectionName: main-https
  hostnames:
  - "ui-argocd.lan"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 443
